--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,13 @@
-Flask
-Flask-SocketIO
+Flask==1.1.2
+Flask-Session==0.3.2
+Flask-SocketIO==4.3.0
+Flask-SQLAlchemy==2.4.3
+Jinja2==2.10.1
+MarkupSafe==1.1.0
+requests==2.21.0
+urllib3==1.24.2
+Werkzeug==0.15.3
+
+# Heroku
+psycopg2==2.7.6.1
+gunicorn==20.0.4
